syntax = "proto3";

package hello.v1;

option go_package = "grpc-lab/gen/hello/v1;hellov1";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string full_name = 1;
}

message HelloReply {
  string message = 1;
}
